--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/13circle/MJUcovidDiagnosisMacro/issues"
   },
-  "homepage": "https://github.com/13circle/MJUcovidDiagnosisMacro#readme"
+  "homepage": "https://github.com/13circle/MJUcovidDiagnosisMacro#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "puppeteer": "^4.0.0"
+  }
 }
