--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "puppeteer": "^4.0.0"
+    "nodemailer": "^6.4.10",
+    "puppeteer": "^4.0.0",
+    "puppeteer-core": "^4.0.0"
   }
 }
