--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mju-covid-diagnosis-macro",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -16,12 +17,32 @@
     "url": "https://github.com/13circle/MJUcovidDiagnosisMacro/issues"
   },
   "homepage": "https://github.com/13circle/MJUcovidDiagnosisMacro#readme",
+  "_moduleAliases": {
+    "@root": ".",
+    "@routes": "routes",
+    "@utils": "utils",
+    "@views": "views",
+    "@config": "config"
+  },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.4.10",
-    "puppeteer": "^4.0.0",
-    "puppeteer-core": "^4.0.0"
+    "app-root-path": "~3.0.0",
+    "cookie-parser": "~1.4.5",
+    "debug": "~4.2.0",
+    "dotenv": "~8.2.0",
+    "ejs": "~3.1.5",
+    "express": "~4.17.1",
+    "express-mysql-session": "~2.1.4",
+    "express-session": "~1.17.1",
+    "http-errors": "~1.8.0",
+    "module-alias": "~2.2.2",
+    "morgan": "~1.10.0",
+    "mysql": "~2.18.1",
+    "node-schedule": "~1.3.2",
+    "nodemailer": "~6.4.10",
+    "puppeteer": "~4.0.0",
+    "puppeteer-core": "~4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "~2.0.6"
   }
 }
