--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-mysql-session": "~2.1.4",
     "express-session": "~1.17.1",
     "http-errors": "~1.8.0",
+    "joi": "^17.3.0",
     "module-alias": "~2.2.2",
     "morgan": "~1.10.0",
     "mysql": "~2.18.1",
